new sections arrived

--- a/thesis intermedia/3- state of art/3.3/3.3.1 LLMs.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.1 LLMs.md
@@ -2,7 +2,8 @@
 
 [StructEval: Benchmarking LLMs’ Capabilities to Generate Structural Outputs](https://arxiv.org/html/2505.20139v1)
 [Are LLMs good at structured outputs? A benchmark for evaluating structured output capabilities in LLMs - ScienceDirect](https://www.sciencedirect.com/science/article/abs/pii/S0306457324001687)
-## ==há algumas referências em falta==
+
+## ==há algumas referências em falta e falta meter benchmark dos structured outputs==
 A evolução recente dos **Modelos de Linguagem de Grande Escala (LLMs)** redefiniu a forma como sistemas computacionais interpretam e produzem linguagem natural. Estes modelos tornaram-se o núcleo de múltiplas soluções de inteligência artificial, permitindo transformar instruções textuais em representações estruturadas e executáveis. No contexto mais amplo dos sistemas de análise de dados, os LLMs representam a camada de **interpretação semântica** que viabiliza a tradução de comandos expressos em linguagem natural para formatos formais — como JSON ou SQL.
 
 Assim, esta secção tem como objetivo **contextualizar o panorama tecnológico dos LLMs**, analisando a evolução arquitetónica, a diversidade de abordagens e os principais indicadores de desempenho. 
