não está nada fácil

--- a/thesis intermedia/3- state of art/3.3/3.3.4 JSON Generation Content.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.4 JSON Generation Content.md
@@ -87,20 +87,11 @@ Estas falhas ocorrem quando o LLM (_reader_ ou gerador) recebe o contexto corret
 
 . Isso ocorre tipicamente quando há **"demasiado ruído ou informação contraditória"** no contexto
 
-.
-
 • **FP5 Formato Errado (****Wrong Format****):** O LLM ignorou uma instrução de _prompt_ para extrair a informação num formato específico (como uma tabela ou lista)
-
-.
 
 • **FP6 Especificidade Incorreta (****Incorrect Specificity****):** A resposta gerada **não é específica o suficiente** ou, inversamente, é demasiado específica para satisfazer a necessidade do utilizador
 
-.
-
 • **FP7 Incompleto (****Incomplete****):** A resposta não está incorreta, mas **omite parte da informação** que estava disponível e deveria ter sido extraída do contexto
-
-.
-
 
 
 
@@ -118,154 +109,27 @@ Estas falhas ocorrem quando o LLM (_reader_ ou gerador) recebe o contexto corret
 
 ## Context inference
 
-## **1. "Compressing Context to Enhance Inference Efficiency of Large Language Models" (Selective Context)**
-
-- **Autores:** Yucheng Li, et al.
-    
-- **Venue:** ACL 2023 (EMNLP)
-    
-- **Citações:** 230+
-    
-- **Link:** [https://aclanthology.org/2023.emnlp-main.391/](https://aclanthology.org/2023.emnlp-main.391/)
-    
-- **Foco:** Pruning inteligente de contexto redundante mantendo qualidade semântica
-    
-- **Resultados:** BERTScore drop mínimo (.023), redução 50% custos computacionais
-    
-- **Relevância:** Demonstra que **inferir e selecionar contexto relevante** preserva qualidade semântica[aclanthology](https://aclanthology.org/2023.emnlp-main.391/)​
-    
-
----
-
-## **2. "Context-Aware Semantic Recomposition Mechanism (CASRM) for Large Language Models"**
-
-- **Autores:** Proposta técnica robusta
-    
-- **Venue:** arXiv (166 páginas, metodologia peer-review quality)
-    
-- **Link:** [https://arxiv.org/html/2501.17386v1](https://arxiv.org/html/2501.17386v1)
-    
-- **Foco:** Dynamic adjustment de representações semânticas baseado em cues contextuais
-    
-- **Resultados:** Coerência semântica 7.2→8.5 (narrative), 6.8→8.1 (technical docs)
-    
-- **Relevância:** Evidência empírica direta de que **context-aware adjustment** melhora qualidade semântica[arxiv](https://arxiv.org/html/2501.17386v1)​
-    
-
----
-
-## **3. "Context Awareness Gate (CAG) for Retrieval Augmented Generation"**
-
-- **Autores:** Novel architecture
-    
-- **Venue:** arXiv
-    
-- **Link:** [https://arxiv.org/html/2411.16133v1](https://arxiv.org/html/2411.16133v1)
-    
-- **Foco:** Ajuste dinâmico de prompt do LLM baseado em query context inference
-    
-- **Resultados:** Context relevancy 0.684, Answer relevancy 0.821
-    
-- **Relevância:** Mostra que **inferir e ajustar contexto dinamicamente** melhora groundedness e relevância[arxiv](https://arxiv.org/html/2411.16133v1)​
-    
-
----
-
-## **4. "Context-Sensitive Semantic Reasoning in Large Language Models"**
-
-- **Autores:** Estudo comparativo
-    
-- **Venue:** OpenReview (peer-reviewed)
-    
-- **Link:** [https://openreview.net/forum?id=MCblyd8f7I&noteId=MCblyd8f7I](https://openreview.net/forum?id=MCblyd8f7I&noteId=MCblyd8f7I)
-    
-- **Foco:** Como sensibilidade ao contexto local/task afeta raciocínio semântico
-    
-- **Resultados:** Comportamento de LLMs é context-dependent (similar a humanos)
-    
-- **Relevância:** Evidência empírica de que **contexto influencia diretamente** qualidade semântica[openreview](https://openreview.net/forum?id=MCblyd8f7I&noteId=MCblyd8f7I)​
-    
-
----
-
-## **5. "CHARPEVAL: Benchmarking Large Language Models' Contextual Reasoning in Knowledge-Grounded Dialogue"**
-
-- **Autores:** Abbas Ghaddar, et al.
-    
-- **Venue:** ACL 2025 (Findings)
-    
-- **Link:** [https://aclanthology.org/2025.findings-acl.860/](https://aclanthology.org/2025.findings-acl.860/)
-    
-- **Foco:** Benchmark de contextual reasoning em LLMs
-    
-- **Resultados:** LLMs têm dificuldade com chunks descontínuos de texto
-    
-- **Relevância:** Identifica **limitações de context inference** e oferece framework de avaliação[aclanthology](https://aclanthology.org/2025.findings-acl.860/)​
-    
-
----
-
-## **6. "In-Context Learning (ICL) in LLMs: Framework Bayesiano"**
-
-- **Autores:** Lakera AI (síntese técnica baseada em literatura peer-reviewed)
-    
-- **Venue:** Technical explainer (2025)
-    
-- **Link:** [https://www.lakera.ai/blog/what-is-in-context-learning](https://www.lakera.ai/blog/what-is-in-context-learning)
-    
-- **Foco:** ICL como **inferência Bayesiana** de padrões contextuais para executar tarefas
-    
-- **Framework:** Modelo "localiza" conceitos latentes através de **inferência sobre contexto** no prompt
-    
-- **Relevância:** ICL **É essencialmente context inference aplicada**—modelo deduz task de exemplos contextuais[lakera](https://www.lakera.ai/blog/what-is-in-context-learning)​
-    
-
----
-
-## **Resumo: 6 Papers Core de Context Inference**
-
-|#|Paper|Venue|Foco|Evidência de Melhoria Semântica|
-|---|---|---|---|---|
-|1|Selective Context|ACL 2023|Pruning inteligente|BERTScore mantido (.023 drop)|
-|2|CASRM|arXiv|Dynamic adjustment|Coerência 7.2→8.5|
-|3|CAG for RAG|arXiv|Dynamic prompt|Answer relevancy 0.821|
-|4|Context-Sensitive Reasoning|OpenReview|Context-dependency|Behavior context-dependent|
-|5|CHARPEVAL|ACL 2025|Benchmark|Identifica limitações|
-|6|ICL Framework|Lakera AI|Inferência Bayesiana|ICL = context inference|
-
----
-
-## **Aviso Crítico Final**
-
-⚠️ **Limitação importante:** Mesmo estes 6 papers **não usam "context inference" como termo consolidado**. Usam variantes:
-
-- "Context compression/selection"[aclanthology](https://aclanthology.org/2023.emnlp-main.391/)​
-    
-- "Context-aware processing"[arxiv](https://arxiv.org/html/2501.17386v1)​
-    
-- "Context sensitivity"[openreview](https://openreview.net/forum?id=MCblyd8f7I&noteId=MCblyd8f7I)​
-    
-- "Contextual reasoning"[aclanthology](https://aclanthology.org/2025.findings-acl.860/)​
-    
-- "In-context learning"[lakera](https://www.lakera.ai/blog/what-is-in-context-learning)​
-    
-
-**Razão:** "Context inference" **não é termo padronizado** na literatura de LLMs. Por isso, construí esta lista agregando papers que tratam do **conceito subjacente**—inferir, selecionar e ajustar contexto dinamicamente para melhorar outputs.
-
-**Para tese academicamente honesta:**
-
-> "O termo 'context inference' não está consolidado na literatura de LLMs, sendo frequentemente referido através de conceitos relacionados como 'contextual reasoning', 'context-aware processing' e 'in-context learning'. Esta análise agrega estudos peer-reviewed que demonstram empiricamente que **inferir e ajustar contexto dinamicamente** melhora qualidade semântica de outputs [lista papers 1-6]."
-
-**Estes 6 papers são os mais fortes e diretos que existem actualmente para fundamentar o conceito.**
-
-1. [https://aclanthology.org/2023.emnlp-main.391/](https://aclanthology.org/2023.emnlp-main.391/)
-2. [https://arxiv.org/html/2501.17386v1](https://arxiv.org/html/2501.17386v1)
-3. [https://arxiv.org/html/2411.16133v1](https://arxiv.org/html/2411.16133v1)
-4. [https://openreview.net/forum?id=MCblyd8f7I¬eId=MCblyd8f7I](https://openreview.net/forum?id=MCblyd8f7I&noteId=MCblyd8f7I)
-5. [https://aclanthology.org/2025.findings-acl.860/](https://aclanthology.org/2025.findings-acl.860/)
-6. [https://www.lakera.ai/blog/what-is-in-context-learning](https://www.lakera.ai/blog/what-is-in-context-learning)​
-
+A Survey on In-context Learning - [2301.00234](https://arxiv.org/pdf/2301.00234)
+==In-context learning is a paradigm that allows language models to learn tasks given only a few examples in the form of demonstration.== 
 ​
+
+(não é peer reviewed, só tem 24 citações) Context-Aware Semantic Recomposition Mechanism for Large Language Models - [*2501.17386v1](https://arxiv.org/pdf/2501.17386v1)
+==A coerência semântica aumentou, por exemplo, de **7.2 para 8.5** na geração de texto narrativo e de **6.8 para 8.1** na síntese de documentação técnica==
+Ver o que está sublinhado nesse paper, tem la muita coisa!!!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## Fine tuning
 https://arxiv.org/html/2308.10792v9 - Survey abrangente que sistematiza instruction tuning (IT), também chamado Supervised Fine-Tuning (SFT), como técnica para adaptar LLMs através de pares (instrução, output). Cobre datasets, técnicas de geração de dados sintéticos (Self-Instruct), aplicações multi-modais, domain-specific adaptation e otimizações para eficiência computacional.[](https://arxiv.org/html/2308.10792v9)**Crítica:** Apesar de compreensivo, ainda com pouca cobertura de catastrophic forgetting, avaliação de robustez ou análise de quando IT falha em contextos fora-do-distribuição.[](https://arxiv.org/html/2308.10792v9)​​
 
